<?xml version="1.0"?>
<package>
  <name>iri_poseslam</name>
  <version>0.0.0</version>
  <description>
    <p>
    This is the software associated with the following papers:
    </p>
    <p>
    V. Ila, J.M. Porta and J. Andrade-Cetto.<br />
    <b>Information-based compact Pose SLAM.</b><br />
    IEEE Transactions on Robotics, 26(1): 78-93, 2010.<br />
    http://www.iri.upc.edu/download/scidoc/1096
    </p>
    <p>
    V. Ila, J.M. Porta and J. Andrade-Cetto.<br />
    <b>Amortized constant time state estimation in Pose SLAM and hierarchical SLAM using a mixed Kalman-information filter.</b><br />
     Robotics and Autonomous Systems, 59(5): 310-318, 2011.<br />
     http://www.iri.upc.edu/download/scidoc/1226
    </p>
    <p>
    R. Valencia, M. Morta, J. Andrade-Cetto and J.M. Porta.<br />
    <b>Planning reliable paths with Pose SLAM.</b><br />
    IEEE Transactions on Robotics, 29(4): 1050-1059, 2013.<br />
    http://www.iri.upc.edu/download/scidoc/1419
    </p>
    <p>
    The Matlab code related to this package is in:<br />
    <a href="http://www.iri.upc.edu/people/porta/Soft/TRO-Doc/index.html">Matlab toolbox for PoseSLAM</a>
    or straight <a href="http://www.iri.upc.edu/people/porta/Soft/TRO-Code.tar.gz">code.tar.gz</a>
    </p>
    <p>
    These are the Spanish national projects that have made possible this software:<br />
    <a href="http://www.iri.upc.edu/project/show/83">PAU: Percepción y acción ante incertidum/bre</a><br />
    <a href="http://www.iri.upc.edu/project/show/115">PAU+: Perception and Action in Robotics Problems with Large State Spaces</a>
    </p>
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="labrobotica@iri.upc.edu">labrobotica</maintainer>
  <maintainer email="mmorta@iri.upc.edu">Marti Morta</maintainer>
  <maintainer email="jvallve@iri.upc.edu">Joan Vallve</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://wiki.ros.org/iri_poseslam</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="jvallve@iri.upc.edu">Joan Vallve</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- ****************************************************************** -->
  <!--                 Place build dependencies here                      -->
  <!-- ****************************************************************** -->
  <!--   <build_depend>message_generation</build_depend> -->
  <build_depend>message_generation</build_depend>
  <build_depend>iri_base_algorithm</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>iri_laser_icp</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>

  <!-- ****************************************************************** -->
  <!--                   Place run dependencies here                      -->
  <!-- ****************************************************************** -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <run_depend>message_generation</run_depend>
  <run_depend>iri_base_algorithm</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>iri_laser_icp</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
