<?xml version="1.0"?>
<package>
  <name>iri_safe_cmd</name>
  <version>1.0.0</version>
  <description>This node takes the cmd_vel input and depending on front and/or rear LaserScan lectures and the command, stops the platform or lets it go</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="labrobotica@iri.upc.edu">labrobotica</maintainer>
  <maintainer email="mmorta@iri.upc.edu">Marti Morta</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/iri_safe_cmd</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="mmorta@iri.upc.edu">Marti Morta</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- ****************************************************************** -->
  <!--                 Place build dependencies here                      -->
  <!-- ****************************************************************** -->
  <build_depend>iriutils</build_depend>
  <build_depend>iri_base_algorithm</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>

  <!-- ****************************************************************** -->
  <!--                   Place run dependencies here                      -->
  <!-- ****************************************************************** -->
  <run_depend>iriutils</run_depend>
  <run_depend>iri_base_algorithm</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
